--- a/o.html
+++ b/o.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="b.css">
 </head>
 <body>
     <h1>first agin</h1>
@@ -12,6 +13,7 @@
     <h1>third agin</h1>
     <h1>fourt agin</h1>
     <h1>five agin</h1>
+    
     
 </body>
 </html>
